--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ margin-bottom: 20px;
     margin: 10px;
     margin-top: 0px;
     margin-bottom: 10px;
-    border-radius: 5%;
+    border-radius: 10px;
     height: 40px;
     box-shadow: 6px 6px rgb(0, 0, 0, 0.25);
 }
