--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,23 @@ margin-bottom: 20px;
     height: 40px;
     box-shadow: 6px 6px rgb(0, 0, 0, 0.25);
 }
+@keyframes blink {
+    0%, 100% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+  }
+  .titulo{
+align-items: center;
+text-align: center;
+
+  }
+.titulo::after {
+    content: '|';
+    opacity: 1;
+    margin-left: 5px;
+    display: inline-block;
+    animation: blink .7s infinite;
+  }
