--- a/css/style.css
+++ b/css/style.css
@@ -60,3 +60,11 @@ text-align: center;
     display: inline-block;
     animation: blink .7s infinite;
   }
+  h2{
+
+    font-size: 34px;
+  }
+  h3{
+
+    font-size: 11.8pt;
+  }
