--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   justify-content: center;
   position: fixed;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background: #101010;
   z-index: 99999;
 }
