--- a/css/style.css
+++ b/css/style.css
@@ -1,275 +1,76 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Nunito:wght@700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-* {
+@font-face {
+    font-family: CaskaydiaCove;
+    src: url('/fonts/Caskaydia\ Cove\ Nerd\ Font\ Complete.ttf');
+}
+
+body {
+    background-image: url('/img/bg.webp');
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:  'Roboto', sans-serif;
-}
-.load{
-  align-content: center;
-  justify-content: center;
-}
-#loading{
-  align-content: center;
-  justify-content: center;
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: #101010;
-  z-index: 99999;
-}
-#loading img {
-  width: 100%;
-  height: 100%;
-}
-body 
-{
-    width: 100%;
-    max-width: 100%;
-    background: #393E46;
-    font-family:  'Roboto', sans-serif;
-}
-/*Barra de Titulo*/  
-h2{
-    font-size: 25pt;
-    padding-top:  40px;
-    margin-bottom: -10px;
-}
-.logotipo img
-{
-    position: absolute;
-    margin-right: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: left;
-}  
-.container-header
-{
-    width: 100%;
-    box-shadow: 0px 5px rgba(0, 0, 0,0.15   );
-}
-.navbar 
-{
-    display: flex;
-    align-items: center;
-    justify-content: right;
-    height: 75px;
-    background-color: #5E8D93;
-}
-.itens-navbar
-{
-    margin-right: 10px;
-    padding: 10px;
-    text-decoration: none;
+    font-family: 'CaskaydiaCove';
     color: white;
-    font-size: 1.5em;
 }
 
-/*Conteudo Pricipal*/    
-.main-conteudo
-{
-  
-  background-size: cover;
-  background-attachment: fixed;
-  background-color: rgba(0, 0, 0, 0.600);
-  background-blend-mode: overlay;
-  border-bottom: 10px solid rgba(0, 0, 0,0.40);
-    margin-top: 20px;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;    
-    text-align: left;
-    color: white;
-    margin: 0px auto;
-}
-
-.Titulo
-{
-    text-align: center;
-    font-size: 50px;
-    padding-top: 30px;
-    margin-bottom: 20px;
-}
-
-section
-{    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-.texto
-{
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-    margin: 25px;
-    padding-left: 10px;
-    font-size: 1.2em;
-}
-.titulo
-{
-    align-items: center;
-    text-align: center;
-    font-size: 50px;
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-@keyframes blink {
-    0%, 100% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0;
-    }
-  }
-.titulo::after {
-    content: '|';
-    opacity: 1;
-    margin-left: 5px;
-    display: inline-block;
-    animation: blink .7s infinite;
-  }
-.imagemFoto
-{
-    -webkit-animation: fadeIn ease 3s;
-    -moz-animation: fadeIn ease 3s;
-    -o-animation: fadeIn ease 3s;
-    -ms-animation: fadeIn ease 3s;
-    position: relative ;
-    justify-content: center;
+.avatar {
     border-radius: 50%;
-    width: 300px;
-    height: 300px;
-}
-@keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-moz-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-webkit-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-o-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-  
-  @-ms-keyframes fadeIn {
-    0% {opacity:0;}
-    100% {opacity:1;}
-  }
-
-.texto img
-{
-    position: absolute  ;
-    margin-left: 100px;
-    border-radius: 50%;
-    width: 300px;
-    height: 300px;
-    box-shadow: 4px 4px rgb(0, 0, 0, 0.25);
-}
-.texto::after {
-    content: '|';
-    opacity: 1;
-    margin-left: 5px;
-    display: inline-block;
-    animation: blink .7s infinite;
-  }
-.main-conteudo div
-{
-    display: flex;
-    justify-content: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-
-.main-conteudo div img
-{    
+    box-shadow: 0px 0px 15px 0px #5198D6;
     margin: 20px;
-    margin-top: 10px;
-    box-shadow: 4px 4px rgb(0, 0, 0, 0.25);
 }
 
-@keyframes fadeIn {
-  0% {opacity: 0;}
-  100% {opacity: 1;} 
-} 
-
-.logos
-{   
-    margin-right: px;
-    margin: 10px;
+.workspace {
     display: flex;
-    flex-direction: row;
-    justify-content: center;    
-    text-align: center;
-    color: white;
-    margin: 0px auto;
- 
-}
-.logos img
-{   
-  
-    border-radius: 10%;
-    width: 80px;
-    height: 80px;
-    box-shadow: 4px 4px rgb(0, 0, 0, 0.10);
-}
-.Tec
-{
-    color: white;
-    font-size: 30px;
-    align-self: center;
-    text-align: center;
-    padding-top: 20px;
-
-    margin-bottom: 20px;
-}
-  
-footer
-{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;    
-    text-align: center; 
-    margin-top: 20px;
-    padding-bottom: 10px;
-    width: 100%;
-    background-color: #222831;
-    box-shadow: 0px -5px rgba(0, 0, 0,0.15   );
-}
-.redes img{
-    width: 200px;
-    margin: 10px;
-    margin-top: 0px;
-    margin-bottom: 10px;
-    border-radius: 10px;
-    height: 50px;
-    box-shadow: 6px 6px rgb(0, 0, 0, 0.25);
-    border-radius: 8px;
-}
-footer div
-{
-    margin  : 10px;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    flex-direction: column;
 }
 
-.miguelsoft{
-    width: 400px;
-    height: 200;
-    display: block;
-    margin-left: auto;
-    margin-right: auto
+@media screen and (min-width: 800px) {
+    .workspace {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        flex-direction: row;
+    }
+}
+
+.emoji {
+    vertical-align: middle;
+    width: 40px;
+    height: 40px;
+    padding: 5px;
+    margin-right: 8px;
+}
+
+.token-class {
+    color: #4EC9B0;
+}
+
+.token-keyword {
+    color: #5198D6;
+}
+
+.token-literal {
+    color: #D69D85;
+}
+
+.token-enum {
+    color: #B8D7A3;
+}
+
+.token-signature {
+    color: #9CDCFC;
+}
+
+    .token-signature:hover {
+        color: #569CD6;
+    }
+
+.token-comment {
+    color: #57A649;
+}
+
+pre {
+    font-family: 'CaskaydiaCove';
+    color: white;
 }
