--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,13 @@
 
 body {
     background-image: url('/img/bg.webp');
-    margin: 0;
     font-family: 'CaskaydiaCove';
     color: white;
 }
 
 .avatar {
     border-radius: 50%;
-    box-shadow: 0px 0px 15px 0px #5198D6;
+    box-shadow: 0px 0px 15px 0px #3c87c9;
     margin: 20px;
 }
 
@@ -20,17 +19,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    flex-direction: column;
 }
-
-@media screen and (min-width: 800px) {
-    .workspace {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        flex-direction: row;
+@media screen and (max-width: 800px) {
+    .workspace{
+        flex-direction: column;
+        font-size: 14px;
     }
 }
 
